--- a/src/templates/initialwizard.step1.hbs
+++ b/src/templates/initialwizard.step1.hbs
@@ -8,5 +8,5 @@
 	</tbody>
 </table>
 
-<button id="newproject" type="button" style="float:left">{{gettext "New project"}}</button>
-<button id="openproject" type="button" style="float:right">{{gettext "Open project"}}</button>
+<button id="newproject" type="button" style="display:inline-block">{{gettext "New project"}}</button>
+<button id="openproject" type="button" style="display:inline-block">{{gettext "Open project"}}</button>
