--- a/src/templates/initialwizard.step2.hbs
+++ b/src/templates/initialwizard.step2.hbs
@@ -6,4 +6,4 @@
 </div>
 <button id="advprojbtn" disabled="disabled">{{gettext "Advanced Project"}}</button>
 <button id="smplprojbtn" disabled="disabled">{{gettext "Simple Project"}}</button>
-<button id="wzrdgoback">{{gettext "Go back"}}</button>
+<button id="wzrdgoback">{{gettext "Cancel"}}</button>
