--- a/src/components/core/text/toolbar.hbs
+++ b/src/components/core/text/toolbar.hbs
@@ -1,4 +1,4 @@
-<div class="textbox-toolbar">
+<div class="cbtextbox-toolbar content">
 <div class="btn-toolbar" data-role="editor-toolbar" data-target="{{identifier}}">
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="fa fa-font"></i><b class="caret"></b></a>
