--- a/tests/estilo.css
+++ b/tests/estilo.css
@@ -1,28 +1,50 @@
-aside{
+/*aside{
 	float:left;
 	margin-top:100px;
 	width: 191px;
-}
+}*/
 aside>ol>li{
 	list-style-type:none;
 }
 article{
 	position:absolute;
 	display:block;
-	left: 200px;
-	height: 100%;
+	/*left: 200px;*/
+	/*height: 100%;*/
 	width: 80%;
 }
 footer{
-	position: absolute;
+/*	position: absolute;
 	display: block;
 	left: -1px;
 	bottom: -1px;
 	height: 8%;
 	width: 100%;
+*/
+	height: 30%;
 }
 .centered{
 	text-align: center;
+}
+span.right{
+	text-align: right;
+	right:0px;
+	width: 25%;
+	position:absolute;
+	margin-right:20px;
+}
+span.left{
+	text-align: left;
+	left:0px;
+	width: 25%;
+	position: absolute;
+	margin-left:20px;
+}
+footer{
+	text-align: center;
+}
+footer{
+	height: 100px;
 }
 .bordered{
 	border: 1px solid black;
@@ -32,11 +54,14 @@ footer{
 }
 #title{
 	font-size: xx-large;
+	position:absolute;
+	z-index: 99;
+	left: 45%;
 }
 aside>ol>li{
-	font-size: x-large;
+	font-size: large;
 }
-img{
+/*img{
 	position: absolute;
 }
 #data1 img{
@@ -52,7 +77,7 @@ img{
 	height:200px;
 	width: 100px;
 	transform: rotate(110deg);
-}
+}*/
 .hide{
 	display:none;
 }
