Refactoring code to include cbobjects into cbsections easily.

--- a/src/templates/initialwizard.step1.hbs
+++ b/src/templates/initialwizard.step1.hbs
@@ -12,5 +12,6 @@
 	<div class="btn-group" role="group">
 		<button id="newproject" class="btn btn-default" type="button" style="display:inline-block">{{gettext "New project"}}</button>
 		<button id="openproject" class="btn btn-primary" type="button" style="display:inline-block">{{gettext "Open project"}}</button>
+		<button id="importproject" class="btn btn-primary" type="button" style="display:inline-block">{{gettext "Import project"}}</button>
 	</div>
 </div>
