load correct translations file and import menus working

--- a/src/templates/initialwizard.importprojects.hbs
+++ b/src/templates/initialwizard.importprojects.hbs
@@ -5,10 +5,9 @@
 	<span id="inputSuccess2Status" class="sr-only">(success)</span>
 </div>
 <div class="btn-toolbar" role="toolbar">
-	<div class="btn-group" role="group">
-		<button id="importhtml5" class="btn btn-default" type="button" style="display:inline-block">{{gettext "HTML5"}}</button>
-		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block">{{gettext "SCORM"}}</button>
-		<button id="importmetadatalomes" class="btn btn-primary" type="button" style="display:inline-block">{{gettext "Metadata LOM-ES"}}</button>
+	<div class="btn-group" role="group" id="importbuttonactions">
+		<button id="importhtml5" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "HTML5"}}</button>
+		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "SCORM"}}</button>
 	</div>
 </div>
 <button id="wzrdgoback">{{gettext "Cancel"}}</button>
