added youtube component

--- a/src/templates/initialwizard.step2.hbs
+++ b/src/templates/initialwizard.step2.hbs
@@ -5,5 +5,5 @@
 	<span id="inputSuccess2Status" class="sr-only">(success)</span>
 </div>
 <button id="advprojbtn" disabled="disabled">{{gettext "Advanced Project"}}</button>
-<button id="smplprojbtn" disabled="disabled">{{gettext "Simple Project"}}</button>
+<button id="smplprojbtn" disabled="disabled" style="display:none">{{gettext "Simple Project"}}</button>
 <button id="wzrdgoback">{{gettext "Cancel"}}</button>
