--- a/src/templates/exportPdfProject.wizard.hbs
+++ b/src/templates/exportPdfProject.wizard.hbs
@@ -10,7 +10,7 @@
          </div>
       <div class="radio">
       		<label for="orientationpage">{{gettext "Page Orientation:"}}</label>
-			<label class="radio-inline"><input type="radio" name="orientation" value="Portrait" checked="checked">{{gettext "Postrait"}}</label>
+			<label class="radio-inline"><input type="radio" name="orientation" value="Portrait" checked="checked">{{gettext "Portrait"}}</label>
 			<label class="radio-inline"><input type="radio" name="orientation" value="Landscape">{{gettext "Landscape"}}</label>
       </div>
 
@@ -20,9 +20,10 @@
 				<label class="radio-inline"><input type="radio" name="numeracion" value="0" checked="checked">{{gettext "No"}}</label>
                   
             <label for="positionnumber"></label>
-				<label class="radio-inline"><input type="radio" name="posicionN" value="footerRight" disabled="disabled">{{gettext "Right"}}</label>
-				<label class="radio-inline"><input type="radio" name="posicionN" value="footerCenter" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
 				<label class="radio-inline"><input type="radio" name="posicionN" value="footerLeft" disabled="disabled">{{gettext "Left"}}</label>
+				<label class="radio-inline"><input type="radio" name="posicionN" value="footerCenter" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
+				<label class="radio-inline"><input type="radio" name="posicionN" value="footerRight" disabled="disabled">{{gettext "Right"}}</label>
+				
       </div>
 
 
@@ -32,13 +33,13 @@
 				<label class="radio-inline"><input type="radio" name="header" value="0" checked="checked">{{gettext "No"}}</label>
                   
             <label for="positionheader"></label>
-				<label class="radio-inline"><input type="radio" name="posicionH" value="headerRight" disabled="disabled">{{gettext "Right"}}</label>
-				<label class="radio-inline"><input type="radio" name="posicionH" value="headerCenter" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
 				<label class="radio-inline"><input type="radio" name="posicionH" value="headerLeft" disabled="disabled">{{gettext "Left"}}</label>
+				<label class="radio-inline"><input type="radio" name="posicionH" value="headerCenter" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
+				<label class="radio-inline"><input type="radio" name="posicionH" value="headerRight" disabled="disabled" >{{gettext "Right"}}</label>
       	  
 	  </div>	
          <label for="headertext">{{gettext "Text to header page"}}</label>
-			<input name="headertext" class="form-control" placeholder="{{gettext "Enter header page text"}}" disabled="disabled"</input> 
+			<input name="headertext" class="form-control" placeholder="{{gettext "Enter header page text"}}" value="{{headertext}}"disabled="disabled"</input> 
      <div>
 		<label>{{gettext "Path where save of pdf file:"}}</label><input name="path" type="file" nwsaveas="proyect.pdf" disabled="disabled"</label> 
      </div>
