--- a/src/themes/editor/default/css/99-main.css
+++ b/src/themes/editor/default/css/99-main.css
@@ -236,3 +236,19 @@ body{
 .cbobject.selected .ui-rotatable-handle{
     display: initial;
 }
+
+.cbcliclayer{
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+.cbobject.selected .cbcliclayer{
+    z-index: -1
+}
+
+
