--- a/src/templates/exportWebZipProject.wizard.hbs
+++ b/src/templates/exportWebZipProject.wizard.hbs
@@ -10,5 +10,5 @@
 <button id="exportwebzipbtn" disabled="disabled">{{gettext "Generate zip"}}</button>
 </div>
 <p><p>
-<div class="waiting" style="display:none"><font color="#FC0202"><strong>{{gettext "Zip Generation in progress. Please wait a moment..."}}</strong></font></div>
-
+<div class="waitingOK" style="display:none"><font color="#FC0202"><strong>{{gettext "Zip Generation in progress. Please wait a moment..."}}</strong></font></div>
+<div class="waitingER" style="display:none"><font color="#FC0202"><strong>{{gettext "There was an error generating WeZip file. Please cancel the process"}}</strong></font></div>
