--- a/src/components/core/text/toolbar.hbs
+++ b/src/components/core/text/toolbar.hbs
@@ -32,13 +32,13 @@
         <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
       </div>
       <div class="btn-group">
+      <a class="btn" data-edit="insertHTML <table cellspacing='0'><thead><th>head1</th><th>head2</th></thead><tbody><tr><td>Val1</td><td>Val2</td></tr><tr><td>Val3</td><td>Val4</td></tr></tbody></table>" title="Table"><i class="fa fa-table"></i></a>
 		  <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
 		    <div class="dropdown-menu input-append">
 			    <input class="span2" placeholder="URL" type="text" data-edit="createLink"/>
 			    <button class="btn" type="button">Add</button>
         </div>
         <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
-
       </div>
       
 </div>
