--- a/src/templates/exportPdfProject.wizard.hbs
+++ b/src/templates/exportPdfProject.wizard.hbs
@@ -55,4 +55,5 @@
 </div>
 <p><p>
 <div class="waitingOK" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF Generation in progress. Please wait a moment..."}}</strong></font></div>
+<div class="waitingFiles" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF Generation in progress. Copying interactive files..."}}</strong></font></div>
 <div class="waitingER" style="display:none"><font color="#FC0202"><strong>{{gettext "There was an error generating the PDF file. Please cancel de process"}}</strong></font></div>
