new fillinthegaps component

--- a/src/components/core/fillinthegaps/toolbar.hbs
+++ b/src/components/core/fillinthegaps/toolbar.hbs
@@ -1,6 +1,9 @@
 <div class="cbtextbox-toolbar content">
 <div class="btn-toolbar" data-role="editor-toolbar" data-target="{{identifier}}">
       <div class="btn-group">
+        <a class="btn" data-extracommand="fgp"><i class="fa fa-plus-square-o"></i></a>
+      </div>
+      <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="fa fa-font"></i><b class="caret"></b></a>
           <ul class="dropdown-menu">
           </ul>
@@ -25,24 +28,5 @@
         <a class="btn" data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="fa fa-indent-left"></i></a>
         <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="fa fa-indent-right"></i></a>
       </div>
-      <div class="btn-group">
-        <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="fa fa-align-left"></i></a>
-        <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="fa fa-align-center"></i></a>
-        <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="fa fa-align-right"></i></a>
-        <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
-        <a class="btn" data-extracommand="table" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-table"></i></a>
-        
-      </div>
-      <div class="btn-group">
-
-		  <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
-		    <div class="dropdown-menu input-append">
-			    <input class="span2" placeholder="URL" type="text" data-edit="createLink"/>
-			    <button class="btn" type="button">Add</button>
-        </div>
-        <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
-
-      </div>
-      
 </div>
 </div>
