Fix dropdown table creation style in template.

--- a/src/components/core/text/toolbar.hbs
+++ b/src/components/core/text/toolbar.hbs
@@ -35,7 +35,7 @@
       </div>
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Insert Table" data-extracommand="marcar"><i class="fa fa-table"></i></a>
-        <div class="dropdown-menu">
+        <div class="dropdown-menu" style="padding-left:10px;">
             <span>Filas:</span>
             <span>
             <ul id="tablemenuRow" class="pagination pagination-sm">
