Wip in translation

--- a/src/components/core/text/toolbar.hbs
+++ b/src/components/core/text/toolbar.hbs
@@ -60,14 +60,14 @@
             <br />
             <input id="inputWithHeader" type="checkbox" />{{gettext "With Header:"}}
             <li role="presentation" class="divider"></li>
-            <button id="tablemenuButton" class="btn" type="button">Add</button>
+            <button id="tablemenuButton" class="btn" type="button">{{gettext "Add"}}</button>
           </div>
       </div>
       <div class="btn-group">
   		  <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
   		    <div class="dropdown-menu input-append">
   			    <input class="span2" placeholder="URL" type="text" data-edit="createLink"/>
-  			    <button class="btn" type="button">Add</button>
+  			    <button class="btn" type="button">{{gettext "Add"}}</button>
           </div>
           <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
 
