--- a/src/components/core/fillinthegaps/toolbar.hbs
+++ b/src/components/core/fillinthegaps/toolbar.hbs
@@ -11,9 +11,9 @@
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
-          <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
-          <li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
-          <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
+          <li><a data-edit="fontSize 5"><font size="5">{{gettext "Huge"}}</font></a></li>
+          <li><a data-edit="fontSize 3"><font size="3">{{gettext "Normal"}}</font></a></li>
+          <li><a data-edit="fontSize 1"><font size="1">{{gettext "Small"}}</font></a></li>
           </ul>
       </div>
       <div class="btn-group">
